2008-01-24  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsdaemon.c:
	Indentation fix
	
        * hal/ghaldrive.[ch]:
        * hal/hal-device.c:
        * hal/ghalvolume.c:
        * hal/ghalmount.c:
	Clean up coding style
	
        * hal/ghalvolumemonitor.[ch]:
	Clean up coding style
	Don't show drives if we're ignoring all their
	volumes (and there are volumes)
	
        * hal/hal-pool.c:
	Clean up coding style
	Actually look at cap_only.
	Free private dbus_connection on error

2008-01-24  Bastien Nocera  <hadess@hadess.net>

	* programs/Makefile.am:
	* programs/gvfs-mkdir.c: (main): Add a test mkdir program

2008-01-23  Bastien Nocera  <hadess@hadess.net>

	* client/test-uri-utils.c: (main):
	* client/Makefile.am: Add test program for the
	functions in gvfsuriutils.c

	* client/gvfsuriutils.c: (g_vfs_decode_uri):
	Fix parsing of IPv6 URIs where the host is in brackets

2008-01-23  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendtrash.c:
        (add_extra_trash_info):
	Use -, not _ in attribute names

2008-01-23  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendtrash.c:
        (add_extra_trash_info):
	Use :: to delimit namespace for trash attributes

2008-01-22  Gil Forcada  <gforcada@gnome.org>

	* configure.ac: Added ca to ALL_LINUGAS.

2008-01-22  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendsftp.c:
	Ensure we return a IS_DIRECTORY error when
	we open a file for reading (#511225)
	The same needs to happen for writes.

2008-01-21  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Post release version bump

=== gvfs 0.1.4 ===

2008-01-21  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

2008-01-21  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonfile.c:
        * client/sftpuri.c:
        * common/gmounttracker.c:
        * daemon/gvfsmonitor.c:
        * daemon/gvfsbackend.c:
	Fix warnings
	
        * daemon/gvfsbackendburn.c: